--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,17 @@
 PORT = 8000
+
+ORIGIN = ["http://localhost:8000"] 
+
+NODE_ENV = "development"
+
+DB_URL = 'mongodb+srv://admin:lbV4fedGGpisiSI6@eduhub.wypsyab.mongodb.net/EduHub'
+
+CLOUD_NAME = dvk7vpgoz
+
+CLOUD_API_KEY = 228212582981294
+
+CLOUD_SECRETE_KEY = YzqOzUGCbyx4ESv_up46s3xl8Rc
+
+REDIS_URL = rediss://default:ATGhAAIjcDFhNWY3YTAwNjVhMDY0MmVmYWMzYzUxY2M0NGQ1MjhkOHAxMA@awake-ewe-12705.upstash.io:6379
+
+// ACCESS_TOKEN_PRIVET_KEY = 
