user activation done

--- a/server/.env
+++ b/server/.env
@@ -6,6 +6,8 @@ NODE_ENV = "development"
 
 DB_URL = 'mongodb+srv://admin:lbV4fedGGpisiSI6@eduhub.wypsyab.mongodb.net/EduHub'
 
+# DB_URL = mongodb://localhost:27017
+
 CLOUD_NAME = dvk7vpgoz
 
 CLOUD_API_KEY = 228212582981294
