login and logout with session cookies complete

--- a/server/.env
+++ b/server/.env
@@ -18,6 +18,13 @@ REDIS_URL = rediss://default:ATGhAAIjcDFhNWY3YTAwNjVhMDY0MmVmYWMzYzUxY2M0NGQ1Mjh
 
 ACTIVATION_SECRET = 9471682319487035
 
+ACCESS_TOKEN = '[J.Xvm~jWh/P7TV*l|hgnJ__"-R0£/38hIAn4]R#mqL^h6AUaH'
+
+REFRESH_TOKEN = '*0~9E^Sw&x0}Z(};7d>5~W£KK[i6U\RE;VhFFnA=/dpsD,LD12'
+
+ACCESS_TOKEN_EXPIRE = 5
+
+REFRESH_TOKEN_EXPIRE = 59
 
 SMTP_HOST = smtp.gmail.com
 
